RESOLVED FIXED77166
Scrollbars disappear when switching from legacy to overlay scrollbars
https://bugs.webkit.org/show_bug.cgi?id=77166
Summary Scrollbars disappear when switching from legacy to overlay scrollbars
Anders Carlsson
Reported 2012-01-26 17:38:41 PST
Scrollbars *gone* when switching from legacy to overlay scrollbars
Attachments
Patch (3.73 KB, patch)
2012-01-26 17:41 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2012-01-26 17:41:19 PST
mitz
Comment 2 2012-01-26 17:53:52 PST
Comment on attachment 124226 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=124226&action=review > Source/WebCore/ChangeLog:3 > + Scrollbars *gone* when switching from legacy to overlay scrollbars No need for the stars here.
Anders Carlsson
Comment 3 2012-01-27 10:29:17 PST
Note You need to log in before you can comment on or make changes to this bug.