Scrollbars disappear when switching from legacy to overlay scrollbars https://bugs.webkit.org/show_bug.cgi?id=77166

Reviewed by Dan Bernstein.

* platform/ScrollView.cpp:
(WebCore::ScrollView::scrollbarStyleChanged):
Call positionScrollbarLayers to make sure that the new scrollbar layers are positioned correctly.

* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::updateScrollerStyle):
Call ScrollbarThemeMac::setNewPainterForScrollbar after making the call to the scrollbar painter controller
to set the horizontal or vertical imp, since setting the imp will reset the knob style.

Canonical link: https://commits.webkit.org/94053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106073 268f45cc-cd09-0410-ab3c-d52691b4dbfc